CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2009 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.tuxpaint.org/

$Id$

2009.May.28 (0.9.22)
  * New Tools:
    ----------
    * Label - A tool to add text to a drawing, which can be modified or
      moved later.
      By Arunodai Reddy Vudem (GSOC 2008)
      With modifications and integration by
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

  * New Magic Tools:
    ----------------
    * Blinds - Close window blinds over your picture.
      Perspective - Change the image's perspective.
      Moasic Hexagon, Mosaic irregular, Mosaic square - Glass mosaic effects.
      Zoom - Zoom the image in or out.
      By Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * Puzzle - Slide parts of your picture around like a sliding puzzle.
      By Adam 'foo-script' Rakowski <foo-script@o2.pl>
      with modifications by Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * ROYGBIV Rainbow - Draw a rainbow arc using solid colors of
      Red, Orange, Yellow, Green, Blue, Indigo and Violet.

    * Wet Paint - Draws a light coat of paint, and smudges at the same time.
      (Based on Smudge tool.  Requested by gallery artist Angela.)

  * Build System Improvements:
    --------------------------
    * Variety of tweaks to help Tux Paint cross-compile for Windows under Linux
      Volker Grabsch <vog@notjusthosting.com>

    * Added support for building under Haiku OS
      Scott McCreary <scottmc@users.sourceforge.net>

  * Other Improvements:
    -------------------
    * Creating thumbnails for the starters we provide.
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * On systems where Pango is used for UI text rendering, Tux Paint now
      spawns a temporary thread during start-up (at the splash screen) to
      allow "fontconfig" to generate its font cache in the background,